<resources>
    <string name="app_name">Novas Missões do Peixonauta</string>
    <string name="string_usuario">👨‍💼 Usuário:</string>
    <string name="string_senha">🔒 Senha:</string>
    <string name="botao_entrar">ENTRAR</string>
    <string name="resultado_usuario"> </string>
    <string name="resultado_senha"> </string>
    <string name="botao_confirmar">CONFIRMAR</string>
    <string name="string_perfil">PERFIL</string>
    <string name="string_foto">Foto:</string>
    <string name="string_nome_usuario">Usuário:</string>
    <string name="string_nome_senha">Senha:</string>
    <string name="string_nome_bio">Bio:</string>
    <string name="text_nome">Digite seu nome aqui</string>
    <string name="botao_start">Play</string>
    <string name="text_boasvindas">Bem vindo(a)!</string>
    <string name="text_menu">MENU</string>
    <string name="text_poupeagua">Poupe Água!</string>
    <string name="botao_voltar">Voltar</string>
    <string name="text_dica1">Feche a torneira enquanto escova os dentes!</string>
    <string name="text_dica2">Fique menos tempo no chuveiro!</string>
    <string name="text_dica3">Use a água de forma consciente!</string>
    <string name="btn_consumo">CONSUMO</string>
    <string name="scroll">Rolar histórias</string>
    <string name="text_vocesabia">Você Sabia?</string>
    <string name="text_curi1">Apenas 0,77% da água do mundo está disponível para o consumo humano.</string>
    <string name="text_curi2">Um banho de 15 minutos gasta cerca de 120 litros!</string>
    <string name="text_curi3">40% da água do Brasil é desperdiçada!</string>
    <string name="btn_proximo">Próximo</string>
    <string name="historia1">Histórinha numero 1</string>
    <string name="tela_curi">Tela de Curiosidades</string>
    <string name="imagecuri">Imagem de personagem</string>
    <string name="sair">Sair</string>
    <string name="estrela">estrelinha arredondada</string>
    <string name="ilustracao">ilustração</string>
    <string name="titulocalculadora">CONSUMO</string>
    <string name="entrada1">Quantos minustos você gasta?</string>
    <string name="entrada2">Você quer ver seu gasto de água durante quantos dias?</string>
    <string name="edit_cal1">Digite os minutos</string>
    <string name="edit_cal2">Digite o número de dias</string>
    <string name="preresul">Seu consumo em litros foi de:</string>
    <string name="btn_cal">CALCULAR</string>
    <string name="dicahistorinha">Role a tela para o lado! >>> </string>
</resources>

