<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/amarelo_branco"
    tools:context=".MainActivity2">

    <View
        android:id="@+id/view"
        android:layout_width="412dp"
        android:layout_height="67dp"
        android:background="@color/azul_claro2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/string_perfil"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.64" />

    <TextView
        android:id="@+id/nome_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:fontFamily="@font/arista_pro"
        android:text="@string/string_nome_usuario"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.206"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/nome_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:fontFamily="@font/arista_pro"
        android:text="@string/string_nome_senha"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.344"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/nome_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="231dp"
        android:fontFamily="@font/arista"
        android:text="@string/string_nome_bio"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bio"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome_senha"
        app:layout_constraintVertical_bias="0.19"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/bio"
        android:layout_width="288dp"
        android:layout_height="167dp"
        android:background="@color/azul_claro2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.715"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.618"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button_salvar"
        android:layout_width="235dp"
        android:layout_height="63dp"
        android:backgroundTint="@color/azul_claro3"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/botao_salvar"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.875"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/voltar"
        android:layout_width="62dp"
        android:layout_height="53dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/seta_voltar" />

    <TextView
        android:id="@+id/resultado_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultado_usuario"
        tools:layout_editor_absoluteX="188dp"
        tools:layout_editor_absoluteY="152dp" />

    <TextView
        android:id="@+id/resultado_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultado_senha"
        tools:layout_editor_absoluteX="187dp"
        tools:layout_editor_absoluteY="246dp" />


</androidx.constraintlayout.widget.ConstraintLayout>