<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_medio"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="442dp"
        android:layout_height="806dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.746"
        app:srcCompat="@drawable/principal"
        tools:ignore="ContentDescription,HardcodedText" />

    <EditText
        android:id="@+id/nome"
        android:layout_width="299dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/azul_pastel"
        android:ems="10"
        android:fontFamily="@font/alata"
        android:hint="@string/text_nome"
        android:inputType="text"
        android:textColorHint="@color/azul_pastel"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.732"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="228dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/laranja"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/botao_start"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.892"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/bemvindo"
        android:layout_width="228dp"
        android:layout_height="50dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/text_boasvindas"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>