<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_claro2"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="442dp"
        android:layout_height="806dp"
        android:background="@drawable/foto1"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.773"
        app:srcCompat="@drawable/foto1"
        tools:ignore="ContentDescription,HardcodedText,ImageContrastCheck,VisualLintBounds" />

    <Button
        android:id="@+id/button_entrar"
        android:layout_width="264dp"
        android:layout_height="64dp"
        android:backgroundTint="@color/azul_esverdeado_claro"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/botao_entrar"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.887"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/usuario"
        android:layout_width="337dp"
        android:layout_height="61dp"
        android:layout_marginHorizontal="40dp"
        android:backgroundTint="@color/preto_puro"
        android:hint="@string/string_usuario"
        android:inputType="text"
        android:textColorHint="@color/preto_puro"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_entrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.727"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/senha"
        android:layout_width="337dp"
        android:layout_height="61dp"
        android:layout_marginHorizontal="40dp"
        android:backgroundTint="@color/preto_puro"
        android:hint="@string/string_senha"
        android:inputType="textPassword"
        android:textColorHint="@color/preto_puro"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_entrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.857"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>