<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Lista_de_historias"
    android:background = "@drawable/tela2">


        <TextView
            android:id="@+id/idhmenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fredoka_one"
            android:text="@string/text_menu"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023" />

        <ImageButton
            android:id="@+id/historia1"
            android:layout_width="330dp"
            android:layout_height="539dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/historia1"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/hq1"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/sair"
            android:layout_width="72dp"
            android:layout_height="62dp"
            android:backgroundTint="@android:color/transparent"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.01"
            app:srcCompat="@drawable/seta_voltar"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/consumo"
            android:layout_width="223dp"
            android:layout_height="58dp"
            android:backgroundTint="@color/amarelo_claro"
            android:fontFamily="@font/fredoka_one"
            android:text="@string/btn_consumo"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.9" />

        <ImageButton
            android:id="@+id/button_perfil"
            android:layout_width="108dp"
            android:layout_height="106dp"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/foto_of" />


</androidx.constraintlayout.widget.ConstraintLayout>